Build task to check for usage of libraries with vulnerabilities.
Uses the OWASP Dependency Checker project.

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -551,6 +551,10 @@
         <groupId>com.googlecode.gettext-commons</groupId>
         <artifactId>gettext-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+      </plugin>
     </plugins>
   </build>
 </project>
