--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,25 @@
                     </executions>
                 </plugin>
                 <plugin>
+                    <groupId>org.owasp</groupId>
+                    <artifactId>dependency-check-maven</artifactId>
+                    <version>1.2.11</version>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>aggregate</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <skipProvidedScope>true</skipProvidedScope>
+                        <format>ALL</format>
+                        <!-- TODO: Turn this on once all deps are updated -->
+                        <!-- <failBuildOnCVSS>7.0</failBuildOnCVSS> -->
+                    </configuration>
+                </plugin>
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.3</version>
